# linfra

./: .editorconfig  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .tool-versions  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  envvars.bat
.github/: FUNDING.yml
cmake/: Docs.cmake  Mull.cmake  Testing.cmake  mull.yml  test-android.sh  test-ios.sh
cmake/modules/: LimesDocs.cmake  LimesMull.cmake  LimesTesting.cmake  LimesUtil.cmake
cmake/presets/: android.json  base.json  bases.json  clang.json  emscripten.json  gcc.json  ios.json  mull.json  tvos.json  vs-clang.json  vs.json  watchos.json  xcode.json
cmake/presets/ios/: base.json  ios.json  tvos.json  watchos.json
config/: .cmake-format.json  .ecrc  .gitlint  .relint.yml  limes_header.txt  requirements.txt
docs/: CMakeLists.txt  android.md  colors.py  conf.py  emscripten.md  iOS.md  linfra.css  usage.md
docs/rst/: cmake.rst  env-vars.rst  index.rst  platforms.rst  usage.rst
docs/rst/cmake/: LimesDocs.rst  LimesMull.rst  LimesTesting.rst  LimesUtil.rst
docs/rst/env-vars/: EMSCRIPTEN_ROOT.rst  IOS_SIMULATOR_DEVICE_ID.rst  TVOS_SIMULATOR_DEVICE_ID.rst  WATCHOS_SIMULATOR_DEVICE_ID.rst  env-var.txt
env/: android-find-ndk.py  android-select-avd.py  android.envrc  choose-ios-simulators.py  cmake.envrc  emscripten.envrc  ios.envrc  mull.envrc
env/unix/: android.envrc  choose-ios-simulators.py  cmake.envrc  emscripten.envrc  ios.envrc
env/win/: android.bat  cmake.bat  emscripten.bat  util.bat
scripts/: create-android-avd.sh  install-mull.sh  shutdown-ios-simulators.sh  start-ios-simulators.sh
